# ecas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_win_x86.bat
examples/: CMakeLists.txt  demo.cpp  demo.hpp  graph_base.cpp  main.cpp
include/dlas/: dlas.h  dlas.hpp
include/ecas/: ecas.hpp
src/: CMakeLists.txt
src/backend/: dot_op.cpp  dot_op.hpp  gemm_op.cpp  gemm_op.hpp  op_factory.cpp  op_factory.hpp  operator.hpp  ops_list.hpp
src/backend/buffer/: host_buffer.cpp  host_buffer.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp
src/backend/engine/: engine.hpp
src/backend/engine/vulkan/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  common.hpp  descriptor_pool.cpp  descriptor_pool.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  shader_module.cpp  shader_module.hpp  vulkan_engine.cpp  vulkan_engine.hpp
src/core/: allocator.cpp  allocator.hpp  async_graph.cpp  async_graph.hpp  buffer.cpp  buffer.hpp  common.hpp  composite_node.cpp  composite_node.hpp  ecas.cpp  node.cpp  node.hpp  normal_node.cpp  normal_node.hpp  operator_executor.cpp  operator_executor.hpp  scheduler.cpp  scheduler.hpp  session.cpp  tensor.cpp  tensor.hpp  tensor_pool.cpp  tensor_pool.hpp  topology.cpp  topology.hpp
src/kernel/: kernel_dispatcher.cpp  kernel_dispatcher.hpp
src/kernel/generic/: CMakeLists.txt  funcs_list.hpp  hello_world.cpp  math.cpp
src/kernel/vulkan/: CMakeLists.txt  comp2spv.bat  kernel_dispatcher.cpp  kernel_dispatcher.hpp  kernels_list.cpp  kernels_list.hpp  vulkan_hello_world.cpp
src/kernel/vulkan/shaders/: engine_test.comp  matmul_tiled_fp32.comp
src/kernel/x86/: CMakeLists.txt  dot_product.cpp  gemm.cpp  kernel_dispatcher.cpp  kernel_dispatcher.hpp  kernels_list.hpp
src/util/: blocking_queue.hpp  bmp_reader.cpp  bmp_reader.hpp  common.hpp  frame_shift_cache.cpp  frame_shift_cache.hpp  internal_thread.cpp  internal_thread.hpp  logger.cpp  logger.hpp  logging.hpp  ring_buffer.cpp  ring_buffer.hpp  timer.cpp  timer.hpp
tests/: CMakeLists.txt  tests_main.cpp
tests/backend/: dot_op_test.cpp
tests/util/: frame_shift_cache_test.cpp  ring_buffer_test.cpp
tools/: build.sh  build_win_x86.bat  test_android.sh  test_android_win.bat
